implementación de elección de prototipo

--- a/src/assets/locales/es/translation.json
+++ b/src/assets/locales/es/translation.json
@@ -238,7 +238,7 @@
   "Please turn off merge with word first": "Por favor desactive Juntar con Word",
   "Please choose an empty folder": "Por favor seleccione una carpeta vacía",
   "Data change detected, whether to update?": "Cambios detectados, ¿desea actualizar?",
-  "Empty Library": "Vaciar Biblioteca",
+  "Empty Library": "Biblioteca vacía",
   "Download": "Descargar",
   "Use the fonts from your local computer": "Utilizar fuentes desde computadora local",
   "Backup your data with Webdav": "Respalde sus datos con Webdav",
